--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^1.5.1",
     "modern-normalize": "^1.1.0",
+    "node-fetch": "^3.3.2",
     "notiflix": "^3.2.6",
     "slim-select": "^2.6.0",
     "spin.js": "^4.1.1"
